fixed header z-index

--- a/src/views/header/Header.css
+++ b/src/views/header/Header.css
@@ -71,6 +71,7 @@
   left: 0;
   top: 0;
   right: 0;
+  z-index: 110;
   animation: animScrolled 0.5s ease-in-out;
 }
 
